packages/astro/test/fixtures/errors/src/components/SvelteDirectiveError.svelte
<h1>I shouldn't be here</h1>
  